fix: rise coverage