@@ -224,6 +224,22 @@
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						@{argLine}
+						-javaagent:${org.mockito:mockito-core:jar}
+						-XX:+EnableDynamicAgentLoading
+						-Djdk.attach.allowAttachSelf=true
+					</argLine>
+					<excludedGroups>stress</excludedGroups>
+					<systemPropertyVariables>
+						<api.version>1.41</api.version>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
